--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,27 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.11",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/styles": "^4.9.10",
+    "axios": "^0.19.2",
     "next": "9.3.5",
+    "next-redux-wrapper": "^5.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "sass": "^1.26.3"
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/node": "^13.13.0",
     "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
+    "@types/react-redux": "^7.1.7",
+    "eslint": "^6.8.0",
+    "redux-devtools-extension": "^2.13.8",
+    "sass": "^1.26.3",
     "typescript": "^3.8.3"
-  }
+  },
+  "proxy": "http://server:80"
 }
