--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3"
 services:
   db:
+    container_name: DB
     image: clearlinux/postgres
     environment:
       POSTGRES_PASSWORD: 1234
@@ -10,6 +11,7 @@ services:
       - 5432:5432
 
   server:
+    container_name: SERVER
     build:
       context: ./server
       dockerfile: Dockerfile
@@ -19,10 +21,13 @@ services:
       - db
     ports:
       - 80:80
+    expose:
+      - 80
     volumes:
       - ./server:/go/src/server
 
   client:
+    container_name: CLIENT
     build:
       context: ./client
       dockerfile: Dockerfile
@@ -32,5 +37,7 @@ services:
       - server
     ports:
       - 3000:3000
+    expose:
+      - 3000
     volumes:
       - ./client:/usr/src/client
