--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,9 +4,10 @@ RUN swupd bundle-add python3-basic
 
 WORKDIR /go/src/server
 
-COPY . /go/src/server
+COPY go.mod go.sum ./
+RUN go mod download
 
-RUN go get ./...
+COPY . .
 
 RUN go get github.com/githubnemo/CompileDaemon
 
